
Version 0.39

  * bugfixes:
    * fix issue with getting wrong error codes when q= tag is empty
      (issue #3011005)
    * anti-abuse- prevent a message with thousands of signatures from
      thrashing the whole computer (issue #3010997)
    * memory usage- significantly reduced memory footprint for
      processing a message with a large header and many signatures

Version 0.38 - released 2010-03-31

  * New/changed functionality:
    * DNS lookups can now be started asynchronously; the queries are
      created as the header is parsed; the results are not actually
      needed until the entire message has been read. (The Mail::DKIM
      module does not yet do the queries asynchrously; this is just
      the infrastructure so that the queries can be asynchronous in
      the future.)

  * bugfixes:
    * DNS lookup overrides alarm() signal (issue #2854325)

  * documentation updates:
    * document use of custom PrivateKey object, for external signing
    * describe how to get "pretty signatures" in Signer.pm


Version 0.37 - released 2009-09-08

  * New/changed functionality:
    * ADSP records now check whether the domain itself exists, in
      accordance to the ADSP specification

  * bugfixes:
    * fixed regexp used to detect header field names (issue #2803465)
    * various fixes to ADSP checking


Version 0.36 - released 2009-06-02

  * API changes:
    * restore the as_string() method which was accidentally removed
      in version 0.34


Version 0.35 - released 2009-05-22

  * bugfixes:
    * fixed a runaway regular expression in the canonicalization
      routines (patch provided by Mark Martinec)


Version 0.34 - released 2009-05-20

  * New/changed functionality:
    * support for ADSP (author-domain-signing-practices) records
    * removed support for pre-standardized DKIM signatures (i.e. these
      are DKIM signatures without a v= or bh= tag).
    * DNS resolver errors are detected and reported as such

  * API changes: